--- a/data/75.584-PEC2.Rmd
+++ b/data/75.584-PEC2.Rmd
@@ -177,6 +177,13 @@ x_clean <- na.omit(penguins[,c(1,3,4,5,6)])
 x_species <- x_clean[,1]
 x <- x_clean[,2:5]
 ```
+Comprobar datos vacios o nulos
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+print('NA')
+colSums(is.na(penguins))
+print('Blancos')
+colSums(penguins=="")
+```
 
 Planteamos ahora un ejemplo más realista en el que inicialmente no conocemos el número óptimo de clústers. Empecemos probamos con varios valores.  
 
